--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "glucose",
-  "version": "0.0.2",
+  "version": "0.1.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "authors": [
@@ -22,8 +22,8 @@
     "tests"
   ],
   "dependencies": {
-    "zelf": "^0.0.0",
-    "harden": "^0.3.3",
-    "called": "^0.1.0"
+    "called": "^0.1.2",
+    "harden": "^0.3.5",
+    "zelf": "^0.0.4"
   }
 }
