--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
   "name": "glucose",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "authors": [
-    "Richeve S. Bebedor <richeve.bebedor@gmail.com>"
+    "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -22,10 +23,10 @@
     "tests"
   ],
   "dependencies": {
-    "called": "^0.3.0",
-    "harden": "^0.6.0",
-    "protype": "^0.2.0",
-    "truly": "^0.2.0",
-    "zelf": "^0.2.0"
+    "called": "^0.4.0",
+    "harden": "^0.7.0",
+    "protype": "^0.4.0",
+    "truly": "^0.3.0",
+    "zelf": "^0.3.0"
   }
 }
