--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glucose",
-  "version": "0.4.0",
+  "version": "0.5.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "scripts": {
@@ -17,16 +17,19 @@
     "glucose"
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+  "contributors": [
+      "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/volkovasystems/glucose/issues"
   },
   "homepage": "https://github.com/volkovasystems/glucose#readme",
   "dependencies": {
-    "called": "^0.3.0",
-    "harden": "^0.6.0",
-    "protype": "^0.2.0",
-    "truly": "^0.2.0",
-    "zelf": "^0.2.0"
+    "called": "^0.4.0",
+    "harden": "^0.7.0",
+    "protype": "^0.4.0",
+    "truly": "^0.3.0",
+    "zelf": "^0.3.0"
   }
 }
