--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,10 @@
 {
   "name": "glucose",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
+  "support": "glucose.support.js",
+  "deploy": "glucose.deploy.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -23,10 +25,10 @@
     "tests"
   ],
   "dependencies": {
-    "called": "^0.4.0",
-    "harden": "^0.7.0",
-    "protype": "^0.4.0",
-    "truly": "^0.3.0",
-    "zelf": "^0.3.0"
+    "called": "^0.5.0",
+    "harden": "^0.12.0",
+    "protype": "^0.7.0",
+    "truly": "^0.5.0",
+    "zelf": "^0.4.0"
   }
 }
