--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "glucose",
-  "version": "0.7.0",
+  "version": "0.8.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "support": "glucose.support.js",
   "deploy": "glucose.deploy.js",
   "scripts": {
-    "build": "babel glucose.js -o glucose.support.js && webpack",
+    "build": "babel glucose.js -o glucose.support.js && babel option.module.js -o option.js && webpack",
     "test": "mocha glucose-test.js"
   },
   "repository": {
@@ -29,10 +29,15 @@
   },
   "homepage": "https://github.com/volkovasystems/glucose#readme",
   "dependencies": {
-    "babel-runtime": "^6.20.0",
-    "called": "^0.5.0",
-    "harden": "^0.12.0",
-    "protype": "^0.7.0",
+    "clazof": "^0.2.0",
+    "diatom": "^0.4.0",
+    "falze": "^0.3.0",
+    "falzy": "^0.7.0",
+    "harden": "^0.13.0",
+    "kein": "^0.2.0",
+    "protype": "^0.8.0",
+    "stuffed": "^0.2.0",
+    "transpher": "0.0.0",
     "truly": "^0.5.0",
     "zelf": "^0.4.0"
   },
