--- a/bower.json
+++ b/bower.json
@@ -26,14 +26,15 @@
   ],
   "dependencies": {
     "clazof": "^0.2.0",
-    "falze": "^0.3.0",
-    "falzy": "^0.7.0",
-    "harden": "^0.13.0",
     "kein": "^0.2.0",
     "protype": "^0.8.0",
+    "zelf": "^0.4.0",
+    "diatom": "^0.4.0",
+    "falzy": "^0.7.0",
+    "falze": "^0.3.0",
+    "harden": "^0.13.0",
     "stuffed": "^0.2.0",
     "transpher": "^0.2.0",
-    "truly": "^0.5.0",
-    "zelf": "^0.4.0"
+    "truly": "^0.5.0"
   }
 }
