--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "glucose",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "support": "glucose.support.js",
@@ -25,16 +25,17 @@
     "tests"
   ],
   "dependencies": {
-    "clazof": "^0.2.0",
-    "kein": "^0.2.0",
-    "protype": "^0.8.0",
-    "zelf": "^0.4.0",
-    "diatom": "^0.4.0",
-    "falzy": "^0.7.0",
-    "falze": "^0.3.0",
-    "harden": "^0.13.0",
-    "stuffed": "^0.2.0",
-    "transpher": "^0.2.0",
-    "truly": "^0.5.0"
+    "clazof": "^0.5.0",
+    "diatom": "^0.7.0",
+    "falze": "^0.5.0",
+    "falzy": "^0.10.0",
+    "harden": "^0.14.0",
+    "kein": "^0.8.0",
+    "protype": "^0.11.0",
+    "proplist": "^0.6.0",
+    "stuffed": "^0.4.0",
+    "transpher": "^0.5.0",
+    "truly": "^0.9.0",
+    "zelf": "^0.6.0"
   }
 }
