--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glucose",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "support": "glucose.support.js",
@@ -29,24 +29,26 @@
   },
   "homepage": "https://github.com/volkovasystems/glucose#readme",
   "dependencies": {
-    "clazof": "^0.2.0",
-    "diatom": "^0.4.0",
-    "falze": "^0.3.0",
-    "falzy": "^0.7.0",
-    "harden": "^0.13.0",
-    "kein": "^0.2.0",
-    "protype": "^0.8.0",
-    "stuffed": "^0.2.0",
-    "transpher": "^0.2.0",
-    "truly": "^0.5.0",
-    "zelf": "^0.4.0"
+    "babel-runtime": "^6.22.0",
+    "clazof": "^0.5.0",
+    "diatom": "^0.7.0",
+    "falze": "^0.5.0",
+    "falzy": "^0.10.0",
+    "harden": "^0.14.0",
+    "kein": "^0.8.0",
+    "proplist": "^0.6.0",
+    "protype": "^0.11.0",
+    "stuffed": "^0.4.0",
+    "transpher": "^0.5.0",
+    "truly": "^0.9.0",
+    "zelf": "^0.6.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
-    "babel-core": "^6.21.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-latest": "^6.16.0",
-    "source-map-loader": "^0.1.5",
-    "webpack": "^1.14.0"
+    "babel-cli": "^6.22.2",
+    "babel-core": "^6.22.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-latest": "^6.22.0",
+    "source-map-loader": "^0.1.6",
+    "webpack": "^2.2.1"
   }
 }
