--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
   "name": "glucose",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "Sugar coat option.",
-  "main": "glucose.js",
+  "main": "glucose.deploy.js",
   "support": "glucose.support.js",
-  "deploy": "glucose.deploy.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
     "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
@@ -25,18 +24,18 @@
     "tests"
   ],
   "dependencies": {
-    "clazof": "^0.5.0",
-    "diatom": "^0.7.0",
-    "falze": "^0.5.0",
-    "falzy": "^0.10.0",
-    "harden": "^0.14.0",
-    "kein": "^0.8.0",
-    "protype": "^0.11.0",
-    "proplist": "^0.6.0",
-    "stuffed": "^0.4.0",
-    "transpher": "^0.5.0",
-    "truly": "^0.9.0",
-    "truu": "^0.7.0",
-    "zelf": "^0.6.0"
+    "clazof": "^0.12.0",
+    "diatom": "^0.12.0",
+    "falze": "^0.11.0",
+    "falzy": "^0.13.0",
+    "harden": "^0.16.0",
+    "kein": "^0.10.0",
+    "protype": "^0.17.0",
+    "proplist": "^0.9.0",
+    "stuffed": "^0.12.0",
+    "transpher": "^0.9.0",
+    "truly": "^0.13.0",
+    "truu": "^0.12.0",
+    "zelf": "^0.8.0"
   }
 }
