--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "glucose",
-  "version": "0.11.0",
+  "version": "0.12.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "support": "glucose.support.js",
   "deploy": "glucose.deploy.js",
+  "browser": "glucose.deploy.js",
   "scripts": {
-    "build": "babel glucose.js -o glucose.support.js && babel option.module.js -o option.js && webpack",
+    "build": "babel glucose.js --out-file glucose.support.js --source-maps && babel option.module.js -o option.js --source-maps && webpack --progress --display-modules",
     "test": "mocha glucose-test.js"
   },
   "repository": {
@@ -29,25 +30,25 @@
   },
   "homepage": "https://github.com/volkovasystems/glucose#readme",
   "dependencies": {
-    "babel-runtime": "^6.22.0",
-    "clazof": "^0.5.0",
-    "diatom": "^0.7.0",
-    "falze": "^0.5.0",
-    "falzy": "^0.10.0",
-    "harden": "^0.14.0",
-    "kein": "^0.8.0",
-    "proplist": "^0.6.0",
-    "protype": "^0.11.0",
-    "stuffed": "^0.4.0",
-    "transpher": "^0.5.0",
-    "truly": "^0.9.0",
-    "truu": "^0.7.0",
-    "zelf": "^0.6.0"
+    "babel-runtime": "^6.23.0",
+    "clazof": "^0.12.0",
+    "diatom": "^0.12.0",
+    "falze": "^0.11.0",
+    "falzy": "^0.13.0",
+    "harden": "^0.16.0",
+    "kein": "^0.10.0",
+    "proplist": "^0.9.0",
+    "protype": "^0.17.0",
+    "stuffed": "^0.12.0",
+    "transpher": "^0.9.0",
+    "truly": "^0.13.0",
+    "truu": "^0.12.0",
+    "zelf": "^0.8.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.2",
-    "babel-core": "^6.22.1",
-    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "source-map-loader": "^0.1.6",
     "webpack": "^2.2.1"
