--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,27 @@
     "test",
     "tests"
   ],
+  "resolutions": {
+    "clazof": "^0.14.0",
+    "harden": "^0.17.0",
+    "falze": "^0.16.0",
+    "kein": "^0.14.0",
+    "falzy": "^0.15.0",
+    "truly": "^0.15.0",
+    "protype": "^0.19.0",
+    "zelf": "^0.9.0",
+    "raze": "^0.22.0",
+    "arid": "^0.19.0",
+    "wauker": "^0.3.0",
+    "doubt": "^0.21.0",
+    "empt": "^0.17.0",
+    "kount": "^0.10.0",
+    "cemento": "^0.13.0",
+    "asea": "^0.11.0",
+    "protease": "^0.12.0",
+    "een": "^0.10.0",
+    "pyck": "^0.17.0"
+  },
   "dependencies": {
     "clazof": "^0.14.0",
     "diatom": "^0.15.0",
@@ -31,7 +52,7 @@
     "harden": "^0.17.0",
     "kein": "^0.14.0",
     "protype": "^0.19.0",
-    "proplist": "^0.14.0",
+    "proplist": "^0.15.0",
     "stuffed": "^0.17.0",
     "transpher": "^0.12.0",
     "truly": "^0.15.0",
