--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "stuffed": "^0.17.0",
     "transpher": "^0.12.0",
     "truly": "^0.15.0",
-    "truu": "^0.19.0",
+    "wichevr": "^0.4.0",
+    "wichis": "^0.7.0",
     "zelf": "^0.9.0"
   },
   "devDependencies": {
