--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,13 @@
 {
   "name": "glucose",
-  "version": "0.25.0",
+  "version": "0.26.0",
   "description": "Sugar coat option.",
   "main": "glucose.deploy.js",
   "support": "glucose.support.js",
   "authors": [
     "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
@@ -24,19 +25,19 @@
     "tests"
   ],
   "dependencies": {
-    "clazof": "^0.27.0",
-    "diatom": "^0.28.0",
-    "falze": "^0.22.0",
-    "falzy": "^0.19.0",
-    "harden": "^0.21.0",
-    "kein": "^0.25.0",
-    "protype": "^0.21.0",
-    "proplist": "^0.26.0",
-    "stuffed": "^0.22.0",
-    "transpher": "^0.26.0",
-    "truly": "^0.18.0",
-    "wichevr": "^0.9.0",
-    "wichis": "^0.13.0",
-    "zelf": "^0.11.0"
+    "clazof": "^0.30.0",
+    "diatom": "^0.30.0",
+    "falze": "^0.23.0",
+    "falzy": "^0.20.0",
+    "harden": "^0.22.0",
+    "kein": "^0.26.0",
+    "protype": "^0.22.0",
+    "proplist": "^0.28.0",
+    "stuffed": "^0.23.0",
+    "transpher": "^0.27.0",
+    "truly": "^0.19.0",
+    "wichevr": "^0.10.0",
+    "wichis": "^0.14.0",
+    "zelf": "^0.12.0"
   }
 }
