--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glucose",
-  "version": "0.25.0",
+  "version": "0.26.0",
   "description": "Sugar coat option.",
   "main": "glucose.js",
   "support": "glucose.support.js",
@@ -22,7 +22,8 @@
   ],
   "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
   "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>"
+    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+    "Vinse Vinalon <vinsevinalon@gmail.com>"
   ],
   "license": "MIT",
   "bugs": {
@@ -31,27 +32,27 @@
   "homepage": "https://github.com/volkovasystems/glucose#readme",
   "dependencies": {
     "babel-runtime": "^6.23.0",
-    "clazof": "^0.27.0",
-    "diatom": "^0.28.0",
-    "falze": "^0.22.0",
-    "falzy": "^0.19.0",
-    "harden": "^0.21.0",
-    "kein": "^0.25.0",
-    "proplist": "^0.26.0",
-    "protype": "^0.21.0",
-    "stuffed": "^0.22.0",
-    "transpher": "^0.26.0",
-    "truly": "^0.18.0",
-    "wichevr": "^0.9.0",
-    "wichis": "^0.13.0",
-    "zelf": "^0.11.0"
+    "clazof": "^0.30.0",
+    "diatom": "^0.30.0",
+    "falze": "^0.23.0",
+    "falzy": "^0.20.0",
+    "harden": "^0.22.0",
+    "kein": "^0.26.0",
+    "proplist": "^0.28.0",
+    "protype": "^0.22.0",
+    "stuffed": "^0.23.0",
+    "transpher": "^0.27.0",
+    "truly": "^0.19.0",
+    "wichevr": "^0.10.0",
+    "wichis": "^0.14.0",
+    "zelf": "^0.12.0"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-latest": "^6.24.1",
     "source-map-loader": "^0.2.1",
-    "webpack": "^2.5.1"
+    "webpack": "^2.6.1"
   }
 }
