--- a/package.json
+++ b/package.json
@@ -1,58 +1,60 @@
 {
-  "name": "glucose",
-  "version": "0.29.0",
-  "description": "Sugar coat option.",
-  "main": "glucose.js",
-  "support": "glucose.support.js",
-  "deploy": "glucose.deploy.js",
-  "browser": "glucose.deploy.js",
-  "scripts": {
-    "build": "babel glucose.js --out-file glucose.support.js --source-maps && babel option.module.js -o option.js --source-maps && webpack --progress --display-modules",
-    "test": "mocha glucose-test.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/volkovasystems/glucose.git"
-  },
-  "keywords": [
-    "sugar",
-    "coat",
-    "option",
-    "glucose"
-  ],
-  "author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
-  "contributors": [
-    "John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
-    "Vinse Vinalon <vinsevinalon@gmail.com>"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/volkovasystems/glucose/issues"
-  },
-  "homepage": "https://github.com/volkovasystems/glucose#readme",
-  "dependencies": {
-    "babel-runtime": "^6.23.0",
-    "clazof": "^0.31.0",
-    "diatom": "^0.32.0",
-    "falze": "^0.23.0",
-    "falzy": "^0.20.0",
-    "harden": "^0.22.0",
-    "kein": "^0.26.0",
-    "proplist": "^0.31.0",
-    "protype": "^0.22.0",
-    "stuffed": "^0.23.0",
-    "transpher": "^0.28.0",
-    "truly": "^0.19.0",
-    "wichevr": "^0.10.0",
-    "wichis": "^0.14.0",
-    "zelf": "^0.12.0"
-  },
-  "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.25.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-latest": "^6.24.1",
-    "source-map-loader": "^0.2.1",
-    "webpack": "^3.0.0"
-  }
+	"name": "glucose",
+	"version": "0.30.0",
+	"description": "Sugar coat option.",
+	"main": "glucose.js",
+	"support": "glucose.support.js",
+	"deploy": "glucose.deploy.js",
+	"browser": "glucose.deploy.js",
+	"scripts": {
+		"pristine": "rsetmod clean && flxc execute ./.install.sh",
+		"clear": "rsetmod clean --clear",
+		"build": "babel glucose.js --out-file glucose.support.js --source-maps && babel option.module.js -o option.js --source-maps && webpack --progress --display-modules",
+		"pretest": "npm run clear && npm run build",
+		"test": "node glucose-test.js"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/volkovasystems/glucose.git"
+	},
+	"keywords": [
+		"sugar",
+		"coat",
+		"option",
+		"glucose"
+	],
+	"author": "Richeve S. Bebedor <richeve.bebedor@gmail.com>",
+	"contributors": [
+		"John Lenon Maghanoy <johnlenonmaghanoy@gmail.com>",
+		"Vinse Vinalon <vinsevinalon@gmail.com>"
+	],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/volkovasystems/glucose/issues"
+	},
+	"homepage": "https://github.com/volkovasystems/glucose#readme",
+	"dependencies": {
+		"babel-runtime": "^6.25.0",
+		"clazof": "^0.36.0",
+		"diatom": "^0.34.0",
+		"falze": "^0.26.0",
+		"falzy": "^0.23.0",
+		"harden": "^0.23.0",
+		"kein": "^0.30.0",
+		"proplist": "^0.32.0",
+		"stuffed": "^0.27.0",
+		"transpher": "^0.30.0",
+		"truly": "^0.20.0",
+		"wichevr": "^0.14.0",
+		"wichis": "^0.17.0",
+		"zelf": "^0.14.0"
+	},
+	"devDependencies": {
+		"babel-cli": "^6.24.1",
+		"babel-core": "^6.25.0",
+		"babel-plugin-transform-runtime": "^6.23.0",
+		"babel-preset-latest": "^6.24.1",
+		"source-map-loader": "^0.2.1",
+		"webpack": "^3.5.4"
+	}
 }
